--- a/static/style/page.less
+++ b/static/style/page.less
@@ -87,10 +87,12 @@ body{
 	}
 	.work-type-ci{
 		text-indent: 2em;
+		line-height: 28px;
 	}
 	.work-type-wen{
 		p{
 			text-indent: 2em;
+			line-height: 28px;
 			margin-bottom: 18px;
 		}
 	}
