finish add collection function

--- a/templates/add_work.html
+++ b/templates/add_work.html
@@ -30,7 +30,11 @@
 		<div class="control-group">
 			<label class="control-label">作者</label>
 			<div class="controls">
-				<input type="text" name="author" />
+				<input type="text" name="author" class="span2" />
+				<input type="button" class="btn" value="搜索" />
+				<select name="authorID" class="span2">
+					<option>作者</option>
+				</select>
 			</div>
 		</div>
 
