--- a/templates/layout.html
+++ b/templates/layout.html
@@ -49,6 +49,7 @@
 
 							<ul class="dropdown-menu">
 								<li><a href="{{ url_for('add_work') }}">作品</a></li>
+								<li><a href="{{ url_for('add_collection') }}">作品集</a></li>
 								<li><a href="{{ url_for('add_author') }}">文学家</a></li>
 								<li><a href="{{ url_for('add_dynasty') }}">朝代</a></li>
 							</ul>
