--- a/static/style/page.less
+++ b/static/style/page.less
@@ -40,7 +40,7 @@ body{
 		margin-bottom: 40px;
 
 		.work-title{
-			font-size: 30px;
+			font-size: 25px;
 			line-height: 40px;
 			margin-bottom: 5px;
 			font-weight: bold;
@@ -96,13 +96,39 @@ body{
 			margin-bottom: 18px;
 		}
 	}
+
+	.work-collection{
+		font-weight: bold;
+		margin-bottom: 5px;
+	}
 }
 
 // page add work
 //-----------------------------------------------------
 #page-add-work{
-
 }
+
+// page single collection
+//-----------------------------------------------------
+#page-single-collection{
+	.collection{
+		font-size: 30px;
+		line-height: 40px;
+		margin-bottom: 5px;
+		font-weight: bold;
+		font-family: '宋体';			
+	}
+
+	.work-item{
+		margin-bottom: 15px;
+
+		.work-title{
+			font-weight: bold;
+			margin-bottom: 5px;
+		}
+	}
+}
+
 
 // page author
 //-----------------------------------------------------
@@ -111,7 +137,7 @@ body{
 		margin-bottom: 40px;
 
 		.author{
-			font-size: 30px;
+			font-size: 25px;
 			line-height: 40px;
 			margin-bottom: 5px;
 			font-weight: bold;
@@ -150,6 +176,15 @@ body{
 	.author-introduction{		
 	}
 
+	.collection-item{
+		margin-bottom: 15px;
+		
+		.collection{
+			font-weight: bold;
+			margin-bottom: 5px;
+		}
+	}
+
 	.work-item{
 		margin-bottom: 15px;
 
@@ -174,7 +209,7 @@ body{
 		margin-bottom: 40px;
 		
 		.dynasty{
-			font-size: 30px;
+			font-size: 25px;
 			line-height: 40px;
 			margin-bottom: 5px;
 			font-weight: bold;
