--- a/static/style/page.less
+++ b/static/style/page.less
@@ -18,8 +18,6 @@ body{
 			color: #CD9B1D;
 			margin: 20px 0 15px 0;
 		}
-
-
 	}
 }
 
@@ -37,7 +35,7 @@ body{
 //-----------------------------------------------------
 #page-index{
 	.work-item{
-		margin-bottom: 40px;
+		margin-bottom: 30px;
 
 		.work-title{
 			font-size: 25px;
@@ -79,8 +77,10 @@ body{
 	}
 
 	.work-content{
+		//font-family: '仿宋_GB2312';
 		font-family: '宋体';
 		font-weight: bold;
+		//font-size: 14pt;
 	}
 	.work-type-shi{
 		text-align: center;
@@ -134,7 +134,7 @@ body{
 //-----------------------------------------------------
 #page-author{
 	.author-item{
-		margin-bottom: 40px;
+		margin-bottom: 30px;
 
 		.author{
 			font-size: 25px;
@@ -206,7 +206,7 @@ body{
 //-----------------------------------------------------
 #page-dynasty{
 	.dynasty-item{
-		margin-bottom: 40px;
+		margin-bottom: 30px;
 		
 		.dynasty{
 			font-size: 25px;
