--- a/templates/add_work.html
+++ b/templates/add_work.html
@@ -14,7 +14,7 @@ $(document).ready(function(){
 	$('#btn-search-author').click(function(){
 		var author = $('#input-author').val();
 		$.ajax({
-			'url': "{{ url_for('search_authors_in_add_work') }}",
+			'url': "{{ url_for('search_authors_in_work') }}",
 			'type': 'POST',
 			'dataType': 'json',
 			'data': {
