--- a/templates/edit_work.html
+++ b/templates/edit_work.html
@@ -8,17 +8,38 @@
 <script type="text/javascript">
 $(document).ready(function(){
 
+	// add all the author's collections
+	// to the <select> tag
+	$('#btn-search-author').click();
+	$.ajax({
+		'url': "{{ url_for('get_collections_by_author') }}",
+		'type': 'POST',
+		'dataType': 'json',
+		'data': {
+			'authorID': "{{ work.AuthorID }}"
+		},
+		'success': function(data){
+			$.each(data, function(index, collection){
+				var option = "<option value=" + collection['CollectionID'] + ">" + collection['Collection'] + "</option>";
+				$(option).appendTo('#select-collection');
+			});
+
+			// allow work having no collection
+			var option = "<option value=0>无</option>";
+			$(option).appendTo('#select-collection');
+		}
+	})
+
 	var authors = [];
 
-	// read the collections of this author
+	// get the collections of this author
 	// then copy to the global var 'authors'
 	// then triggle the change event
 	// which will read the global var 'authors' to the select tag
-	// that's all
 	$('#btn-search-author').click(function(){
 		var author = $('#input-author').val();
 		$.ajax({
-			'url': "{{ url_for('search_authors_in_work') }}",
+			'url': "{{ url_for('get_authors_by_name') }}",
 			'type': 'POST',
 			'dataType': 'json',
 			'data': {
@@ -38,7 +59,7 @@ $(document).ready(function(){
 		});
 	});
 
-	// add author's collections to the select tag
+	// add author's collections to the <select> tag
 	$("#select-author").change(function(){
 		// get the
 		var authorID = $(this)[0].options[$(this)[0].selectedIndex].value,
@@ -48,7 +69,6 @@ $(document).ready(function(){
 
 		$.each(authors, function(index, author){
 			if(author['AuthorID'] == authorID){
-				// add the collections to collections <select>
 				// and also add 0 option to the end 
 				// because maybe some work don't belong to any collection!
 				collections = author['Collections'];
@@ -63,13 +83,6 @@ $(document).ready(function(){
 			}
 		});
 	});
-
-	// triggle the click event to
-	// init the author <select>
-	// and the collection <select>
-	// tomorrow I think I should use the 
-	// more formal solution to solve this
-	$('#btn-search-author').click();
 
 });
 </script>
@@ -101,7 +114,9 @@ $(document).ready(function(){
 			<div class="controls">
 				<input id="input-author" type="text" class="span2" value="{{ work.Author }}" />
 				<input id="btn-search-author" type="button" class="btn" value="搜索" />
-				<select id="select-author" name="authorID" class="span2"></select>
+				<select id="select-author" name="authorID" class="span2">
+					<option value="{{ work.authorID }}">{{ work.Author }}</option>
+				</select>
 				<select id="select-collection" name="collectionID" class="span2"></select>
 			</div>
 		</div>
