--- a/xichuangzhu/static/style/page.less
+++ b/xichuangzhu/static/style/page.less
@@ -1,5 +1,7 @@
 body{
 	margin: 65px 0 0 0;
+
+	font-family: '宋体';
 	
 	#main-wap{
 		font-size: 18px;
@@ -15,7 +17,7 @@ body{
 
 		h4{
 			font-size: 20px;
-			color: #CD9B1D;
+			//color: #CD9B1D;
 			margin: 20px 0 15px 0;
 		}
 	}
@@ -35,23 +37,51 @@ body{
 //-----------------------------------------------------
 #page-index{
 	.work-item{
-		margin-bottom: 30px;
+		margin-bottom: 15px;
 
 		.work-title{
-			font-size: 25px;
-			line-height: 40px;
-			margin-bottom: 5px;
+			font-size: 16px;
+			line-height: 30px;
 			font-weight: bold;
 			font-family: '宋体';
 		}
 
 		.work-author{
-			font-size: 18px;
+			font-size: 12px;
 			font-weight: normal;
 
 			a{
 				color: #333;
 			}
+		}
+
+		.work-content{
+			font-size: 14px;
+			line-height: 22px;
+		}
+	}
+
+	.author-item{
+		margin-bottom: 10px;
+
+		.author{
+			font-size: 16px;
+			line-height: 20px;
+			font-weight: bold;
+
+			.author-dynasty{
+				font-size: 12px;
+				font-weight: normal;
+
+				a{
+					color: black;
+				}
+			}					
+		}
+
+		.author-introduction{
+			font-size: 12px;
+			//line-height: 22px;
 		}
 	}
 }
