--- a/xichuangzhu/templates/layout.html
+++ b/xichuangzhu/templates/layout.html
@@ -19,8 +19,11 @@
 					<!-- nav -->
 					<ul class="nav">
 						<li><a href="{{ url_for('index') }}">首页</a></li>
-						<li><a href="{{ url_for('author') }}">文学家</a></li>
-						<li><a href="{{ url_for('dynasty') }}">朝代</a></li>
+						<!-- <li><a href="{{ url_for('author') }}">文学家</a></li> -->
+						<li><a href="#">收藏</a></li>
+						<li><a href="#">论坛</a></li>
+						<li><a href="#">店铺</a></li>
+						<!-- <li><a href="{{ url_for('dynasty') }}">朝代</a></li> -->
 					</ul>
 
 					<!-- search -->
