--- a/xichuangzhu/templates/layout.html
+++ b/xichuangzhu/templates/layout.html
@@ -19,11 +19,9 @@
 					<!-- nav -->
 					<ul class="nav">
 						<li><a href="{{ url_for('index') }}">首页</a></li>
-						<!-- <li><a href="{{ url_for('author') }}">文学家</a></li> -->
-						<li><a href="#">收藏</a></li>
-						<li><a href="#">论坛</a></li>
+						<!-- <li><a href="#">收藏</a></li> -->
+						<!-- <li><a href="#">论坛</a></li> -->
 						<li><a href="#">店铺</a></li>
-						<!-- <li><a href="{{ url_for('dynasty') }}">朝代</a></li> -->
 					</ul>
 
 					<!-- search -->
@@ -65,5 +63,7 @@
 		<div id="main-wap" class="container">
 		{% block body %}{% endblock %}
 		</div>
+
+		<div id="footer">2012 © 西窗烛</div>
 	</body>
 </html>
