--- a/xichuangzhu/static/style/page.css
+++ b/xichuangzhu/static/style/page.css
@@ -1,17 +1,21 @@
-body{margin:55px 0 0 0;font-family:'宋体';}body #main-wap{font-size:18px;line-height:26px;min-height:700px;}body #main-wap a:not[class='btn']{color:#005580;}
+body{margin:55px 0 0 0;font-family:'arial','宋体';}body #main-wap{font-size:18px;line-height:26px;min-height:700px;}body #main-wap a:not[class='btn']{color:#005580;}
 body #main-wap textarea{width:500px;}
 body #main-wap h4{font-size:20px;color:#CD9B1D;margin:20px 0 15px 0;}
 body #main-wap h2{font-size:18px;line-height:18px;font-family:'yahei';font-weight:normal;margin:15px 0;color:darkred;}
-#footer{text-align:center;font-size:12px;font-family:'微软雅黑';margin-bottom:8px;}
+#footer{text-align:center;font-size:12px;font-family:'微软雅黑';margin:20px 0 10px 0;}
+.link-more a{margin-left:5px;font-size:12px;}
 .navbar-search .search-query{line-height:1.2;}
 .form-horizontal .input-append{display:block;}
-#page-index .work-item{margin-bottom:12px;}#page-index .work-item .work-title{font-size:16px;line-height:30px;font-weight:bold;font-family:'宋体';}
+#page-index .work-item{margin-bottom:15px;}#page-index .work-item .work-title{font-size:16px;line-height:30px;font-weight:bold;font-family:'宋体';}
 #page-index .work-item .work-author{font-size:12px;font-weight:normal;}#page-index .work-item .work-author a{color:#333;}
 #page-index .work-item .work-content{font-size:14px;line-height:22px;}
-#page-index .author-item{margin-bottom:12px;}#page-index .author-item .author{font-size:16px;line-height:20px;font-weight:bold;}#page-index .author-item .author .author-dynasty{font-size:12px;font-weight:normal;}#page-index .author-item .author .author-dynasty a{color:black;}
+#page-index .author-item{margin-bottom:15px;}#page-index .author-item .author{font-size:16px;line-height:20px;font-weight:bold;}#page-index .author-item .author .author-dynasty{font-size:12px;font-weight:normal;}#page-index .author-item .author .author-dynasty a{color:black;}
 #page-index .author-item .author-introduction{font-size:12px;}
 #page-index #dynasties-wap{margin:0;list-style:none;}#page-index #dynasties-wap .dynasty-item{float:left;font-size:16px;margin-bottom:5px;}#page-index #dynasties-wap .dynasty-item a{font-weight:bold;}
 #page-index #dynasties-wap .dynasty-item span{margin-right:5px;}
+#page-works .work-item{margin-bottom:15px;}#page-works .work-item .work-title{font-size:16px;line-height:30px;font-weight:bold;font-family:'宋体';}
+#page-works .work-item .work-author{font-size:12px;font-weight:normal;}#page-works .work-item .work-author a{color:#333;}
+#page-works .work-item .work-content{font-size:14px;line-height:22px;}
 #page-single-work .work-title{font-size:30px;line-height:40px;margin-top:10px;margin-bottom:12px;font-weight:bold;font-family:'宋体';text-align:center;clear:both;}
 #page-single-work .work-author{text-align:center;margin-bottom:20px;padding-right:6px;}
 #page-single-work .work-content{font-family:'宋体';font-weight:bold;}
@@ -21,11 +25,13 @@ body #main-wap h2{font-size:18px;line-height:18px;font-family:'yahei';font-weigh
 #page-single-work .work-collection{font-weight:bold;margin-bottom:5px;}
 #page-single-collection .collection{font-size:30px;line-height:40px;margin-bottom:5px;font-weight:bold;font-family:'宋体';}
 #page-single-collection .work-item{margin-bottom:15px;}#page-single-collection .work-item .work-title{font-weight:bold;margin-bottom:5px;}
-#page-author .author-item{margin-bottom:30px;}#page-author .author-item .author{font-size:25px;line-height:40px;margin-bottom:5px;font-weight:bold;font-family:'宋体';}#page-author .author-item .author .author-dynasty{font-size:18px;font-weight:normal;}#page-author .author-item .author .author-dynasty a{color:#333;}
+#page-author .author-wap{border-bottom:1px dashed lightgray;margin:0 0 15px;}#page-author .author-wap .author-dynasty{font-size:16px;line-height:16px;color:darkblue;font-family:'微软雅黑';width:100px;float:left;display:inline-block;}
+#page-author .author-wap .author-group{list-style:none;margin:0 0 0 100px;}#page-author .author-wap .author-group li{float:left;margin-bottom:15px;}#page-author .author-wap .author-group li.author{font-size:16px;line-height:20px;width:90px;}
 #page-single-author .author{font-size:30px;line-height:40px;margin-bottom:5px;font-weight:bold;font-family:'宋体';}
 #page-single-author .author-period{margin-bottom:10px;}
 #page-single-author .collection-item{margin-bottom:15px;}#page-single-author .collection-item .collection{font-weight:bold;margin-bottom:5px;}
 #page-single-author .work-item{margin-bottom:15px;}#page-single-author .work-item .work-title{font-weight:bold;margin-bottom:5px;}
-#page-dynasty .dynasty-item{margin-bottom:30px;}#page-dynasty .dynasty-item .dynasty{font-size:25px;line-height:40px;margin-bottom:5px;font-weight:bold;font-family:'宋体';}#page-dynasty .dynasty-item .dynasty .dynasty-period{font-size:18px;margin-left:5px;font-weight:normal;font-family:'arial','宋体';font-weight:normal;}
+#page-dynasty .dynasty-item{margin-bottom:20px;}#page-dynasty .dynasty-item .dynasty{font-size:16px;line-height:25px;font-weight:bold;font-family:'宋体';}#page-dynasty .dynasty-item .dynasty .dynasty-period{font-size:12px;margin-left:5px;font-weight:normal;font-family:'arial','宋体';font-weight:normal;}
+#page-dynasty .dynasty-item .dynasty-introduction{font-size:14px;line-height:22px;}
 #page-single-dynasty .dynasty{font-size:30px;line-height:40px;margin-bottom:5px;font-weight:bold;font-family:'宋体';}
 #page-single-dynasty .author-item{margin-bottom:15px;}#page-single-dynasty .author-item .author{margin-bottom:5px;font-weight:bold;}
