--- a/xichuangzhu/templates/index.html
+++ b/xichuangzhu/templates/index.html
@@ -8,24 +8,37 @@
 <div class="row">
 	<div class="span8">
 
-		<h2>作品</h2>
+		<h2>
+			作品
+			<span class='link-more'>
+				<a href="{{ url_for('works') }}">更多</a>
+			</span>
+		</h2>
 
 		{% for work in works %}
 		<div class="work-item">
-			<div class="work-title"><a href="{{ url_for('single_work', workID = work.WorkID) }}">{{ work.Title }}</a><sup class="work-author">〔<!-- <a href="{{ url_for('single_dynasty', dynastyID = work.DynastyID) }}">{{ work.Dynasty }}</a>| --><a href="{{ url_for('single_author', authorID=work.AuthorID) }}">{{ work.Author }}</a>〕</div>
-			</sup>
+			<div class="work-title">
+				<a href="{{ url_for('single_work', workID = work.WorkID) }}">{{ work.Title }}</a><sup class="work-author">〔<!-- <a href="{{ url_for('single_dynasty', dynastyID = work.DynastyID) }}">{{ work.Dynasty }}</a>| --><a href="{{ url_for('single_author', authorID=work.AuthorID) }}">{{ work.Author }}</a>〕</sup>
+			</div>
 			
 			<div class="work-content">{{ work.Content|truncate(38, True) }}</div>
 		</div>
 		{% endfor %}
 
-		<!-- <h2>点评</h2> -->
+		<h2>点评</h2>
+
+		<h2>话题</h2>
 
 	</div>
 
 	<div class="span4">
 
-		<h2>文学家</h2>
+		<h2>
+			文学家
+			<span class='link-more'>
+				<a href="{{ url_for('author') }}">全部</a>
+			</span>
+		</h2>
 
 		{% for author in authors %}
 		<div class='author-item'>
@@ -36,7 +49,12 @@
 		</div>
 		{% endfor %}
 
-		<h2>五千年</h2>
+		<h2>
+			五千年
+			<span class='link-more'>
+				<a href="{{ url_for('dynasty') }}">全部</a>
+			</span>
+		</h2>
 
 		<ul id="dynasties-wap">
 			{% for dynasty in dynasties %}
