--- a/xichuangzhu/templates/layout.html
+++ b/xichuangzhu/templates/layout.html
@@ -19,9 +19,9 @@
 					<!-- nav -->
 					<ul class="nav">
 						<li><a href="{{ url_for('index') }}">首页</a></li>
-						<!-- <li><a href="#">收藏</a></li> -->
-						<!-- <li><a href="#">论坛</a></li> -->
-						<li><a href="#">店铺</a></li>
+						<li><a href="#">收藏</a></li>
+						<li><a href="#">论坛</a></li>
+						<!-- <li><a href="#">店铺</a></li> -->
 					</ul>
 
 					<!-- search -->
